--- a/README.textile
+++ b/README.textile
@@ -1,1 +1,3 @@
-h2. Xfeet
+h2. Xfeet: xUnit 4 style performance test tool.
+
+It's a xUnit 4 style form of "Grant Skinner":http://gskinner.com/blog/ 's "PerformanceTest 2":http://gskinner.com/blog/archives/2010/02/performancetest.html .
